# paa

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
chrome-extension/sites/: github.js
extension/: chrome.json  manifest.json  paa.js  paa.wasm
extension/sites/: github.js
src/: lib.rs  mipmap.rs  paa_file.rs  wasm.rs
tests/: to_png.rs
