[package]
name = "paa"
version = "0.2.0"
authors = ["Brett Mayson <brett@mayson.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
byteorder = "1.4.3"
image = "0.24.5"
js-sys = "0.3.60"
texpresso = "2.0.1"
wasm-bindgen = { version = "0.2.83", optional = true }

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]

[dev-dependencies]
criterion = "*"
